--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -34,13 +34,25 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/control_panel">Control Panel</a>
                 </li>
+                <li class="nev-item">
+                    <a class="nav-link" href="/security">Security</a>
+                </li>
                 {% endif %}
 
                 {% if current_user.is_admin() or current_user.is_user() %}
+                
+                <li class="nav-item">
+                    <a class="nav-link" href="/explore">Explore</a>
+                </li>
+                
                 <li class="nav-item">
                     <a class="nav-link" href="/dashboard">Dashboard</a>
                 </li>
                 {% endif %}
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/updates">Updates</a>
+                </li>
 
                 <li class="nav-item">
                     <a class="nav-link" href="/account">Account</a>
