--- a/templates/base.html
+++ b/templates/base.html
@@ -12,17 +12,33 @@
 </head>
 
 <body>
-  {% include 'includes/_navbar.html' %}
+  
+  <div class="container"> 
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="{{ url_for('index')}}">Apps</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('.add_app')}}">Add Apps</a>
+        </li>
+      </ul>
 
-  <div class="container">
-    {% include 'includes/_messages.html' %}
+      <form class="form-inline my-2 my-lg-0" method="POST">
+        <input class="form-control mr-sm-2" type="search" name="search_string" autofocus="autofocus" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" formaction="/search" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
 
-    {% block body %}
-      <!-- page content will appear here -->
+  {% block body %}
 
-    {% endblock %}
+  {% endblock %}
+
   </div>
-
   <!-- Bootstrap -->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
