--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,20 @@
         <button class="btn btn-outline-success my-2 my-sm-0" formaction="/search" type="submit">Search</button>
       </form>
     </div>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('.register')}}">Register</a>
+        </li>
+      </ul>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('.login')}}">Login</a>
+          </li>
+        </ul>
   </nav>
 
   {% block body %}
