--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,47 @@
-
-
 {% extends 'base.html' %}
 
 {% block body %}
 
-<div class="jumbotron text-center">
-    <h1>Welcome To Flask App</h1>
-	<p class="lead">This template demonstrates user login to a Flask application</p>
-  <p><a href="https://www.youtube.com/watch?v=zRwy8gtgJ1A">Python Flask From Scratch series</a></p>
-  <p><a href="https://blog.tecladocode.com/learn-python-defining-user-access-roles-in-flask/"> Defining User Access Levels in Flask</a></p>
-  <p><a href="https://blog.miguelgrinberg.com/post/the-flask-mega-tutorial-part-v-user-logins">Flask Mega-Tutorial</a></p>
-    {% if session.logged_in == NULL %}
-      <a href="/register" class="btn btn-primary btn-lg">Register</a>
-      <a href="/login" class="btn btn-success btn-lg">Login</a>
-    {% endif %}
-  </div>
+<h3>{{ legend }}</h3>
+{% if vendors %}
 
+<table class="table table-hover">
+    <thead>
+      <tr>
+        <th scope="col">Vendor ID</th>
+        <th scope="col">Date/th>
+        <th scope="col">Company</th>
+        <th scope="col">Representative</th>
+        <th scope="col">Phone Number</th>
+        <th scope="col">Installed On</th>
+        <th scope="col">Asset Tag</th>
+        <th scope="col">Type of Service</th>
+        <th scope="col">Bill Amount</th>
+        <th scope="col">Paid?</th>
+        <th scope="col">Returned?</th>
+      </tr>
+    </thead>
+    <tbody>
+        
+        {% for row in vendors %}
+        <tr>
+            <td> {{row.vendor_id}} </td>
+            <td> {{row.order_date}} </td>
+            <td> {{row.booth_num}} </td>
+            <td> {{row.company}} </td>
+            <td> {{row.rep}} </td>
+            <td> {{row.phone_num}} </td>
+            <td> {{row.installed_date}} </td>
+            <td> {{row.asset_num}} </td>
+            <td> {{row.service}} </td>
+            <td> {{row.amount}} </td>
+            <td> {{row.paid}} </td>
+            <td> {{row.returned}} </td>
+        </tr>
+        {% endfor %}
+    </tbody>
+  </table>
+
+      
+{% endif %}
 {% endblock %}
