--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
   
   <div class="container"> 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="{{ url_for('index')}}">Apps</a>
+    <a class="navbar-brand" href="{{ url_for('index')}}">Iowa State Fair</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -23,7 +23,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('.add_app')}}">Add Apps</a>
+          <a class="nav-link" href="{{ url_for('.add_vendor')}}">Add Vendors</a>
         </li>
       </ul>
 
