Created vendors page and edited

--- a/templates/add_vendor.html
+++ b/templates/add_vendor.html
@@ -22,7 +22,7 @@
         {{ form.returned.label }} {{ form.returned(size=3) }}
         
 
-        <input type="submit" value="Add New App"> 
+        <input type="submit" value="Add New Order"> 
 
     </form>
 
