Debugged base, added to navbar, created edit order page

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,8 @@
     <thead>
       <tr>
         <th scope="col">Vendor ID</th>
-        <th scope="col">Date/th>
+        <th scope="col">Date</th>
+        <th scope="col">Booth #</th>
         <th scope="col">Company</th>
         <th scope="col">Representative</th>
         <th scope="col">Phone Number</th>
