--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('.edit_orders')}}">Edit Orders</a>
+        </li>
+      </ul>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
           <a class="nav-link" href="{{ url_for('.add_vendor')}}">Add Vendors</a>
         </li>
       </ul>
