--- a/templates/edit_orders.html
+++ b/templates/edit_orders.html
@@ -20,7 +20,9 @@
         <th scope="col">Bill Amount</th>
         <th scope="col">Paid?</th>
         <th scope="col">Returned?</th>
-        <th scope="col">Edit</th>
+        <th><form action="{{ url_for('add_vendor') }}" method="GET">
+          <input type="submit" value="New Order" class="btn btn-primary" />
+      </form></th>
       </tr>
     </thead>
     <tbody>
