--- a/templates/new_user.html
+++ b/templates/new_user.html
@@ -35,19 +35,13 @@
         </div>
 
         <fieldset>
-            <legend> Permissions: </legend>
-
+            <legend> Enable Admin Access: </legend>
             <p>
-                <label for="user_level_access">
-                    <input type="radio" id="user_level_access" name="access_lvl" value="1"> User access
-                </label>
+              <label for="admin_level_access">
+                <input type="radio" id="admin_level_access" name="access_lvl" value="2" {% if form.access.data == 2 %} checked {% endif %}> Admin access
+              </label>
             </p>
-            <p>
-                <label for="admin_level_access">
-                    <input type="radio" id="admin_level_access" name="access_lvl" value="2"> Admin access
-                </label>
-            </p>
-        </fieldset>
+          </fieldset>
 
    <hr/>
         <div class="form-group">
