--- a/templates/base.html
+++ b/templates/base.html
@@ -14,52 +14,7 @@
 <body>
   
   <div class="container"> 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="{{ url_for('index')}}">Iowa State Fair</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-      <form class="form-inline my-2 my-lg-0" method="POST">
-        <input class="form-control mr-sm-2" type="search" name="search_string" autofocus="autofocus" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" formaction="/search" type="submit">Search</button>
-      </form>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('.control_panel')}}">Control Panel</a>
-        </li>
-      </ul>
-    
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('.index')}}">Vendor Orders</a>
-        </li>
-      </ul>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('.edit_orders')}}">Edit Orders</a>
-        </li>
-      </ul>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('.register')}}">Register</a>
-        </li>
-      </ul>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('.login')}}">Login</a>
-          </li>
-        </ul>
-  </nav>
+  {% include 'includes/_navbar.html' %}
 
   {% block body %}
 
