--- a/templates/edit_orders.html
+++ b/templates/edit_orders.html
@@ -8,7 +8,7 @@
 <table class="table table-hover">
     <thead>
       <tr>
-        <th scope="col">Vendor ID</th>
+        <th scope="col">Order ID</th>
         <th scope="col">Date</th>
         <th scope="col">Booth #</th>
         <th scope="col">Company</th>
@@ -29,7 +29,7 @@
         
         {% for row in vendors %}
         <tr>
-            <td> {{row.vendor_id}} </td>
+            <td> {{row.id}} </td>
             <td> {{row.order_date}} </td>
             <td> {{row.booth_num}} </td>
             <td> {{row.company}} </td>
@@ -43,7 +43,7 @@
             <td> {{row.returned}} </td>
 
             <td>
-                <form action="{{ url_for('get_vendor', vendor_id=row.vendor_id) }}" method="POST">
+                <form action="{{ url_for('get_vendor', id=row.id) }}" method="POST">
                         <button type="submit" class="btn btn-outline-dark">Details</button>
                 </form>
 
