--- a/templates/base.html
+++ b/templates/base.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-  
-  <div class="container"> 
   {% include 'includes/_navbar.html' %}
+  <div class="container"> 
+  {% include 'includes/_messages.html' %}
 
   {% block body %}
 
