--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -23,6 +23,9 @@
                     <a class="nav-link" href="/about">About</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/contact">Contact</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/register">Register</a>
                 </li>
                 <li class="nav-item">
