--- a/templates/edit_orders.html
+++ b/templates/edit_orders.html
@@ -1,8 +1,14 @@
 {% extends 'base.html' %}
 
 {% block body %}
+<hr />
 
-<h3>{{ legend }}</h3>
+<form class="form-inline my-2 my-lg-0" method="POST">
+  <input class="form-control mr-sm-2" type="search" name="search_string" autofocus="autofocus" placeholder="Search" aria-label="Search">
+  <button class="btn btn-outline-success my-2 my-sm-0" formaction="/search" type="submit">Search</button>
+</form>
+
+<h3>Vendor Order Information</h3>
 {% if vendors %}
 
 <table class="table table-hover">
