--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -10,15 +10,11 @@
 
             <a class="navbar-brand" href="/index">Iowa State Fair</a>
 
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <form class="form-inline my-2 my-lg-0" method="POST">
-                    <input class="form-control mr-sm-2" type="search" name="search_string" autofocus="autofocus" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" formaction="/search" type="submit">Search</button>
-                </form>
-            </ul>
-
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                 {% if current_user.is_anonymous%}
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Vendor Orders</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/about">About</a>
                 </li>
