Added logo image and edited about and contact page

--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -8,7 +8,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
 
-            <a class="navbar-brand" href="/index">Iowa State Fair</a>
+
+            <a class="navbar-brand" href="/index"><img src="/static/images/isf-logo.png" alt="logo" style="width: 110px"></a> 
 
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                 {% if current_user.is_anonymous%}
