Adjusted navbar size to be outside the container

--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -1,6 +1,5 @@
-<div class="container">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
             aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,7 +8,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
 
 
-            <a class="navbar-brand" href="/index"><img src="/static/images/isf-logo.png" alt="logo" style="width: 110px"></a> 
+            <a class="navbar-brand" href="/index"><img src="/static/images/isf-logo.png" alt="logo" style="width: 120px;"></a> 
 
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                 {% if current_user.is_anonymous%}
@@ -53,5 +52,5 @@
             </ul>
         </div>
 
-    </nav>
-</div>
+    </div>
+</nav>
