--- a/templates/update_vendor.html
+++ b/templates/update_vendor.html
@@ -8,12 +8,12 @@
 
         {{ form.csrf_token }}
         {{ form.id.label }} {{ form.id(size=5, readonly=true) }}
-        {{ form.order_date.label }} {{ form.order_date(size=10) }}
+        {{ form.order_date.label }} {{ form.order_date(size=10, type="date") }}
         {{ form.booth_num.label }} {{ form.booth_num(size=5) }}
         {{ form.company.label }} {{ form.company(size=20) }}
         {{ form.rep.label }} {{ form.rep(size=40) }}
         {{ form.phone_num.label }} {{ form.phone_num(size=11) }}
-        {{ form.installed_date.label }} {{ form.installed_date(size=10) }}
+        {{ form.installed_date.label }} {{ form.installed_date(size=10, type="date") }}
         {{ form.asset_num.label }} {{ form.asset_num(size=5) }}
         {{ form.service.label }} {{ form.service(size=15) }}
         {{ form.amount.label }} {{ form.amount(size=10) }}
