Text-aligned headers and moved search bar to the right

--- a/templates/control_panel.html
+++ b/templates/control_panel.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block body %}
-  <h1>User Management</h1>
+  <h1 style="text-align: center">User Management</h1>
 
   <div>
 
