--- a/templates/update_vendor.html
+++ b/templates/update_vendor.html
@@ -2,7 +2,7 @@
 {% block body %}
 <div>
 
-    <h3>{{ legend }}</h3>
+    <h2 style="text-align: center">{{ legend }}</h2>
 
     <form method="POST" action="">
 
