--- a/templates/vendors.html
+++ b/templates/vendors.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block body %}
-<h1>Order Detail</h1>
+<h1 style="text-align: center">Order Detail</h1>
 <hr />
 {% from "includes/_formhelpers.html" import render_field %}
 <div>
