--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,12 @@
 {% block body %}
 <hr />
 
-<form class="form-inline my-2 my-lg-0" method="POST">
+<form class="form-inline my-2 my-lg-0" style="float: right" method="POST">
   <input class="form-control mr-sm-2" type="search" name="search_string" autofocus="autofocus" placeholder="Search" aria-label="Search">
   <button class="btn btn-outline-success my-2 my-sm-0" formaction="/search" type="submit">Search</button>
 </form>
 
-<h3>Vendor Order Information</h3>
+<h1>Vendor Order Information</h1>
 {% if vendors %}
 
 <table class="table table-hover">
