Updated the about and contact page

--- a/templates/about.html
+++ b/templates/about.html
@@ -2,9 +2,9 @@
 
 {% block body %}
 
-	<h1 style="text-align: center">About Us</h1>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<h1 style="text-align: center">About this Database</h1>
+	<p>There are hundreds of vendors each year who join us at the Iowa State Fair.  At the Communications Department, we receive vendors' orders early in order to help prepare them at the State Fair.  The purpose of this database is to easily view and search through our organized database for existing order information.  Our department has the abilities to add, update, and remove orders, while other departments are only able to view and search the orders.</p>
+	<p>If you have any questions or there is any update to a vendor's order, please go to the contact page.  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 	<div class="row">
         <div class="col-md-4">
