--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,8 +2,15 @@
 
 {% block body %}
 
-	<h2 style="text-align: center">Questions about Vendor's Communications Orders?</h2>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	<p>Contact Information:</p>
+	<h1 style="text-align: center;">Questions about Vendors Orders?</h1>
+	<img style="padding: 0 15px; float: left;" src="/static/images/contact.jpg" height="300px">
+	<p style="font-weight: bold">Any questions/concerns please contact us below:</p>
+    <address>
+        Maytag Family Center - Communications Dept. <br />
+        3000 East Grand Avenue, Des Moines, IA 50317 <br />
+        Des Moines, Iowa 50320<br />
+        P: (515) 262-3111<br />
+        Email: communications-dept@iowastatefair.org<br />
+     </address>
 
 {% endblock %}
