--- a/templates/update_vendor.html
+++ b/templates/update_vendor.html
@@ -70,7 +70,7 @@
             {{ form.returned(class="form-control") }}
         </div>
 
-        <input type="submit" class="btn btn-primary" value="Save"> 
+        <input type="submit" class="btn btn-success" value="Save"> 
 
         {% endif %}
     </form>
