--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -1,3 +1,13 @@
 h1, h2, h3 {
   text-align: left;
 }
+
+th {
+  text-align: center;
+  vertical-align: middle;
+}
+
+td {
+  text-align: center;
+  vertical-align: middle;
+}
