--- a/templates/index.html
+++ b/templates/index.html
@@ -8,31 +8,34 @@
   <button class="btn btn-outline-success my-2 my-sm-0" formaction="/search" type="submit">Search</button>
 </form>
 
-<h1>Vendor Order Information</h1>
+<h3>Vendor Order Information</h3>
+<hr />
+<div>
 {% if vendors %}
 
-<table class="table table-hover">
-    <thead>
+<table class="table table-striped table-bordered table-sm">
+  <thead class="thead-dark" style="font-size: small;">
       <tr>
-        <th scope="col">Order ID</th>
+        <th scope="col">Order #</th>
         <th scope="col">Date</th>
         <th scope="col">Booth #</th>
         <th scope="col">Company</th>
         <th scope="col">Representative</th>
-        <th scope="col">Phone Number</th>
+        <th scope="col">Phone #</th>
         <th scope="col">Installed On</th>
         <th scope="col">Asset Tag</th>
         <th scope="col">Type of Service</th>
         <th scope="col">Bill Amount</th>
         <th scope="col">Paid?</th>
         <th scope="col">Returned?</th>
+        <th scope="col" style="text-align: center;">Details</th>
       </tr>
     </thead>
     <tbody>
         
         {% for row in vendors %}
-        <tr>
-            <td> {{row.id}} </td>
+        <tr style="font-size: small;">
+            <td style="font-weight: bold;"> {{row.id}} </td>
             <td> {{row.order_date}} </td>
             <td> {{row.booth_num}} </td>
             <td> {{row.company}} </td>
@@ -47,7 +50,7 @@
 
             <td>
                 <form action="{{ url_for('get_vendor', id=row.id) }}" method="POST">
-                        <button type="submit" class="btn btn-outline-dark">Details</button>
+                        <button type="submit" class="btn btn-info" style="width:200x; font-size: x-small;">Details</button>
                 </form>
 
             </td>
@@ -56,6 +59,7 @@
     </tbody>
   </table>
 
-      
 {% endif %}
+
+  </div>
 {% endblock %}
